--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./homework2.js"></script>
-    <title>Homework1</title>
+  <meta charset="UTF-8">
+  <title>Домашкап</title>
 </head>
 <body>
+  <h1>Подсчет</h1>
+  <p>Для просмотра результатов откройте всплывающие окна и/или консоль браузера.</p>
+  <script src="homework2.js"></script>
 </body>
 </html>
